@@ -19,8 +19,8 @@ function Radio.new(o)
 	if not imageData then
 		log.error('could not load', fname)
 	else
-		o.imgWidth = imageData:getWidth() * _G.UISCALE
-		o.imgHeight = imageData:getHeight() * _G.UISCALE
+		o.imgWidth = imageData:getWidth() * _G.UI_SCALE
+		o.imgHeight = imageData:getHeight() * _G.UI_SCALE
 		o.imgChecked = love.graphics.newImage(imageData)
 	end
 
@@ -72,7 +72,7 @@ function Radio:draw()
 		love.graphics.setColor(0.5,0.5,0.5,1)
 	end
 
-	love.graphics.draw(self.img, wx, wy, 0, _G.UISCALE, _G.UISCALE)
+	love.graphics.draw(self.img, wx, wy, 0, _G.UI_SCALE, _G.UI_SCALE)
 
 	if self.text then
 		love.graphics.print(self.text, wx + self.imgWidth + 8, wy + 3)
