@@ -6,4 +6,5 @@
 3 -
 	Agnes x 2
 	Assembly
-	Russian
+	Russian (Yukon)
+	Ukrainian/Crimean
